# Jammin_E

./: README.md  radar2jammer_god.slx
FPGA/: SPI.v  spi_new.v
FPGA/ADC+FIFO/: cons.xdc  fifo.v  top.v
FPGA/ADC+FIFO+SPI/: comb.v  top.v  xdc.xdc
FPGA/DAC_with_waveform/: waveform.v
FPGA/Interface_SPI/: SPI.c
FPGA/Interface_UART/: uart_12bit.py  uart_8bit.py
FPGA/SPI_12bit/: constraint.xdc  spi_with_12bit.v  testbench.v  top.v
FPGA/UART_12bit/: uart_12bit.v
FPGA/UART_8bit/: uart8bit.v  uart8bit_withIDLEcount.v
MATLAB/: Radar_GUI.m  gui  sig_dB.txt  sig_dB2.txt  signal_processing.m  simulation_data.m  test
Manipulator/: test
Manipulator/Jammer_Unit/: CMakeLists.txt  package.xml
Manipulator/Jammer_Unit/launch/: jammer_control.launch
Manipulator/Jammer_Unit/src/: jammer_unit_node.cpp
Manipulator/Radar_Unit/: CMakeLists.txt  package.xml
Manipulator/Radar_Unit/launch/: radar_control.launch
Manipulator/Radar_Unit/src/: radar_unit_node.cpp
Manipulator/dynamixel-workbench/dynamixel_workbench_controllers/src/: dynamixel_workbench_controllers.cpp
Manipulator/history/: basic.yaml  dynamixel_controllers.launch  jammer_unit_node_4.cpp  position_callback_node.cpp  radar2jammer.slxc  radar_unit_node.cpp  radar_unit_node_1.cpp  radar_unit_node_2.cpp  radar_unit_node_3.cpp  radar_unit_node_4.cpp
Manipulator/matlab/: radar2jammer_god.slx  radar2jammer_god.slxc  radar2jammerr.slx
Manipulator/matlab/test/: jammer_unit_node.cpp  radar_unit_node.cpp
